--- a/mlgpt2/index.html
+++ b/mlgpt2/index.html
@@ -73,7 +73,7 @@
                         thinkingMessage.style.textAlign = "left";
                         thinkingMessage.style.color = "#8ECAE6";
                         thinkingMessage.style.fontWeight = "bold";
-                        thinkingMessage.style.maxWidth = "500px";
+                        thinkingMessage.style.maxWidth = "80%";
                         thinkingMessage.style.marginBottom = "10px"
                         chatWindow.appendChild(thinkingMessage);
                         chatWindow.scrollTop = chatWindow.scrollHeight;
@@ -102,7 +102,7 @@
                         aiResponseMessage.style.textAlign = "left";
                         aiResponseMessage.style.color = "#8ECAE6";
                         aiResponseMessage.style.fontWeight = "bold";
-                        aiResponseMessage.style.maxWidth = "500px";
+                        aiResponseMessage.style.maxWidth = "80%";
                         aiResponseMessage.style.marginBottom = "10px"
                         var chatWindow = document.getElementById("chat-window");
                         chatWindow.appendChild(aiResponseMessage);
