--- a/mlcenitex/index.html
+++ b/mlcenitex/index.html
@@ -84,7 +84,7 @@
                         thinkingMessage.style.textAlign = "left";
                         thinkingMessage.style.color = "#1DB2A9";
                         thinkingMessage.style.fontWeight = "bold";
-                        thinkingMessage.style.maxWidth = "500px";
+                        thinkingMessage.style.maxWidth = "80%";
                         thinkingMessage.style.marginBottom = "10px"
                         chatWindow.appendChild(thinkingMessage);
                         chatWindow.scrollTop = chatWindow.scrollHeight;
@@ -113,7 +113,7 @@
                         aiResponseMessage.style.textAlign = "left";
                         aiResponseMessage.style.color = "#1DB2A9";
                         aiResponseMessage.style.fontWeight = "bold";
-                        aiResponseMessage.style.maxWidth = "500px";
+                        aiResponseMessage.style.maxWidth = "80%";
                         aiResponseMessage.style.marginBottom = "10px"
                         var chatWindow = document.getElementById("chat-window");
                         chatWindow.appendChild(aiResponseMessage);
