--- a/mldisastertweets/index.html
+++ b/mldisastertweets/index.html
@@ -86,7 +86,7 @@
                         thinkingMessage.style.textAlign = "left";
                         thinkingMessage.style.color = "#8ECAE6";
                         thinkingMessage.style.fontWeight = "bold";
-                        thinkingMessage.style.maxWidth = "500px";
+                        thinkingMessage.style.maxWidth = "80%";
                         thinkingMessage.style.marginBottom = "10px"
                         chatWindow.appendChild(thinkingMessage);
                         chatWindow.scrollTop = chatWindow.scrollHeight;
@@ -115,7 +115,7 @@
                         aiResponseMessage.style.textAlign = "left";
                         aiResponseMessage.style.color = "#8ECAE6";
                         aiResponseMessage.style.fontWeight = "bold";
-                        aiResponseMessage.style.maxWidth = "500px";
+                        aiResponseMessage.style.maxWidth = "80%";
                         aiResponseMessage.style.marginBottom = "10px"
                         var chatWindow = document.getElementById("chat-window");
                         chatWindow.appendChild(aiResponseMessage);
