--- a/mlgpt2/index.html
+++ b/mlgpt2/index.html
@@ -122,6 +122,7 @@
                                 wordIndex = 0;
                                 lineIndex++;
                                 if (lineIndex < lines.length) {
+                                    aiResponseMessage.textContent += "\n";
                                     aiResponseMessage = document.createElement("div");
                                     aiResponseMessage.style.textAlign = "left";
                                     aiResponseMessage.style.color = "#8ECAE6";
@@ -136,32 +137,6 @@
                             }
                         }, 10);
                     }
-
-                    // function displayResponse(response) {
-                    //     var index = 0;
-                    //     var aiResponseMessage = document.createElement("div");
-                    //     aiResponseMessage.style.textAlign = "left";
-                    //     aiResponseMessage.style.color = "#8ECAE6";
-                    //     aiResponseMessage.style.fontWeight = "bold";
-                    //     aiResponseMessage.style.maxWidth = "80%";
-                    //     aiResponseMessage.style.marginBottom = "10px"
-                    //     var chatWindow = document.getElementById("chat-window");
-                    //     chatWindow.appendChild(aiResponseMessage);
-
-                    //     var interval = setInterval(function () {
-                    //         if (index === 0) {
-                    //             aiResponseMessage.textContent = response[index];
-                    //         } else {
-                    //             aiResponseMessage.textContent += response[index];
-                    //         }
-                    //         index++;
-                    //         if (index >= response.length) {
-                    //             clearInterval(interval);
-                    //         }
-
-                    //         chatWindow.scrollTop = chatWindow.scrollHeight;
-                    //     }, 10);
-                    // }
                 </script>
             </section>
         </article>
