--- a/mlcenitex/index.html
+++ b/mlcenitex/index.html
@@ -64,9 +64,9 @@
             <section class="chat-selection" id="chat-selection">
                 <div class="chat-window" id="chat-window"></div>
                 <select name="chat-mode" id="feature2">
-                    <option value="General">Chat Mode</option>
-                    <option value="General">General</option>
-                    <option value="Cenitex">Cenitex</option>
+                    <option value="General">General Mode</option>
+                    <option value="Cenitex">Cenitex Mode</option>
+                    <option value="Agent">Agent Mode</option>
                 </select>
                 <div class="chat-input">
                     <input type="text" id="feature1" placeholder="Type your message here..."
