--- a/mlcenitex/index.html
+++ b/mlcenitex/index.html
@@ -7,150 +7,155 @@
 </head>
 
 <body>
-    <header id="dashboard">
-        <h1><b>CENITEX</b> KB</h1>
-        AI Knowledge Base Chatbot Powered by a Large Language Model
-    </header>
-    <main>
-        <article id="mainLeft">
-            <section>
-                <h2>CODE</h2>
-                <p>
-                    <i class="fab fa-github" aria-hidden="true"></i>
-                    <a href="https://github.com/lyoh001/AzureKB/blob/main/notebook/fine_tune.ipynb">Fine-tuning</a>
-                </p>
-                <p>
-                    <i class="fab fa-github" aria-hidden="true"></i>
-                    <a href="https://github.com/lyoh001/AzureKB/blob/main/notebook/deploy.ipynb">Deployment</a>
-                </p>
-            </section>
-            <section>
-                <h2>DESIGN</h2>
-                <p>
-                    <i class="fab fa-github" aria-hidden="true"></i>
-                    <a href="https://github.com/lyoh001/AzureFunctions">Architectural Design</a>
-                </p>
-            </section>
-            <section>
-                <h2>KB LINKS</h2>
-                <p>
-                    <i class="fab fa-microsoft" aria-hidden="true"></i>
-                    <a
-                        href="https://vicgov.sharepoint.com/:w:/r/sites/VG001921/Shared%20Documents/Operations/How%20to%27s/Activate%20or%20Approve%20Mailbox%20for%20Dynamics%20365.docx?d=w04bec640b4c643df81341c3d79317da9&csf=1&web=1&e=lemli9">Dynamics</a>
-                </p>
-                <p>
-                    <i class="fab fa-microsoft" aria-hidden="true"></i>
-                    <a
-                        href="https://vicgov.sharepoint.com/:b:/r/sites/VG001921/Shared%20Documents/Operations/How%20to%27s/How%20to%20-%20Gather%20Information%20to%20Raise%20a%20Support%20Request%20with%20Interactive%20(or%20HP).pdf?csf=1&web=1&e=gfTDLb">Interactive</a>
-                </p>
-                <p>
-                    <i class="fab fa-microsoft" aria-hidden="true"></i>
-                    <a
-                        href="https://opswiki-vicgov.msappproxy.net/mediawiki/index.php/McAfee_ENS_introduction_-_Windows_Services">McAfee</a>
-                </p>
-                <p>
-                    <i class="fab fa-microsoft" aria-hidden="true"></i>
-                    <a
-                        href="https://vicgov.sharepoint.com/:w:/r/sites/VG001921/Shared%20Documents/Operations/Technical%20Documents/SpecOps/Functional%20Summary.docx?d=w0bffed0e68414786aaf0e354e5885531&csf=1&web=1&e=fHgM1N">SpecOps</a>
-                </p>
-                <p>
-                    <i class="fab fa-microsoft" aria-hidden="true"></i>
-                    <a
-                        href="https://vicgov.sharepoint.com/:w:/r/sites/VG001921/Shared%20Documents/Operations/Technical%20Documents/Tenable/Tenable%20Agent%20Troubleshooting%20Guide.docx?d=w02e3fb1e634641c28c7a85a31712a0a9&csf=1&web=1&e=5M2PMq">Tenable</a>
-                </p>
-            </section>
-        </article>
-        <article id="mainRight">
-            <section class="chat-selection" id="chat-selection">
-                <div class="chat-window" id="chat-window"></div>
-                <select name="chat-mode" id="feature2">
-                    <option value="General">General Mode</option>
-                    <option value="Cenitex">Cenitex Mode</option>
-                    <option value="Agent">Agent Mode</option>
-                </select>
-                <div class="chat-input">
-                    <input type="text" id="feature1" placeholder="Type your message here..."
-                        onkeydown="handleKeyPress(event)">
-                    <button onclick="predict()">Send</button>
-                </div>
-                <script>
-                    function handleKeyPress(event) {
-                        if (event.keyCode === 13) {
-                            event.preventDefault();
-                            predict();
+    <video autoplay muted loop id="video">
+        <source src="/mlcenitex/bg.mp4" type="video/mp4">
+    </video>
+    <div class="content">
+        <header id="dashboard">
+            <h1><b>CENITEX</b> KB</h1>
+            AI Knowledge Base Chatbot Powered by a Large Language Model
+        </header>
+        <main>
+            <article id="mainLeft">
+                <section>
+                    <h2>CODE</h2>
+                    <p>
+                        <i class="fab fa-github" aria-hidden="true"></i>
+                        <a href="https://github.com/lyoh001/AzureKB/blob/main/notebook/fine_tune.ipynb">Fine-tuning</a>
+                    </p>
+                    <p>
+                        <i class="fab fa-github" aria-hidden="true"></i>
+                        <a href="https://github.com/lyoh001/AzureKB/blob/main/notebook/deploy.ipynb">Deployment</a>
+                    </p>
+                </section>
+                <section>
+                    <h2>DESIGN</h2>
+                    <p>
+                        <i class="fab fa-github" aria-hidden="true"></i>
+                        <a href="https://github.com/lyoh001/AzureFunctions">Architectural Design</a>
+                    </p>
+                </section>
+                <section>
+                    <h2>KB LINKS</h2>
+                    <p>
+                        <i class="fab fa-microsoft" aria-hidden="true"></i>
+                        <a
+                            href="https://vicgov.sharepoint.com/:w:/r/sites/VG001921/Shared%20Documents/Operations/How%20to%27s/Activate%20or%20Approve%20Mailbox%20for%20Dynamics%20365.docx?d=w04bec640b4c643df81341c3d79317da9&csf=1&web=1&e=lemli9">Dynamics</a>
+                    </p>
+                    <p>
+                        <i class="fab fa-microsoft" aria-hidden="true"></i>
+                        <a
+                            href="https://vicgov.sharepoint.com/:b:/r/sites/VG001921/Shared%20Documents/Operations/How%20to%27s/How%20to%20-%20Gather%20Information%20to%20Raise%20a%20Support%20Request%20with%20Interactive%20(or%20HP).pdf?csf=1&web=1&e=gfTDLb">Interactive</a>
+                    </p>
+                    <p>
+                        <i class="fab fa-microsoft" aria-hidden="true"></i>
+                        <a
+                            href="https://opswiki-vicgov.msappproxy.net/mediawiki/index.php/McAfee_ENS_introduction_-_Windows_Services">McAfee</a>
+                    </p>
+                    <p>
+                        <i class="fab fa-microsoft" aria-hidden="true"></i>
+                        <a
+                            href="https://vicgov.sharepoint.com/:w:/r/sites/VG001921/Shared%20Documents/Operations/Technical%20Documents/SpecOps/Functional%20Summary.docx?d=w0bffed0e68414786aaf0e354e5885531&csf=1&web=1&e=fHgM1N">SpecOps</a>
+                    </p>
+                    <p>
+                        <i class="fab fa-microsoft" aria-hidden="true"></i>
+                        <a
+                            href="https://vicgov.sharepoint.com/:w:/r/sites/VG001921/Shared%20Documents/Operations/Technical%20Documents/Tenable/Tenable%20Agent%20Troubleshooting%20Guide.docx?d=w02e3fb1e634641c28c7a85a31712a0a9&csf=1&web=1&e=5M2PMq">Tenable</a>
+                    </p>
+                </section>
+            </article>
+            <article id="mainRight">
+                <section class="chat-selection" id="chat-selection">
+                    <div class="chat-window" id="chat-window"></div>
+                    <select name="chat-mode" id="feature2">
+                        <option value="General">General Mode</option>
+                        <option value="Cenitex">Cenitex Mode</option>
+                        <option value="Agent">Agent Mode</option>
+                    </select>
+                    <div class="chat-input">
+                        <input type="text" id="feature1" placeholder="Type your message here..."
+                            onkeydown="handleKeyPress(event)">
+                        <button onclick="predict()">Send</button>
+                    </div>
+                    <script>
+                        function handleKeyPress(event) {
+                            if (event.keyCode === 13) {
+                                event.preventDefault();
+                                predict();
+                            }
                         }
-                    }
-                    function predict() {
-                        var feature1 = document.getElementById("feature1").value.trim() || " ";
-                        var feature2 = document.getElementById("feature2").value;
-                        var chatWindow = document.getElementById("chat-window");
-                        var userMessage = document.createElement("div");
-                        userMessage.textContent = feature1;
-                        userMessage.classList.add("userMessage");
-                        chatWindow.appendChild(userMessage);
-                        document.getElementById("feature1").value = "";
+                        function predict() {
+                            var feature1 = document.getElementById("feature1").value.trim() || " ";
+                            var feature2 = document.getElementById("feature2").value;
+                            var chatWindow = document.getElementById("chat-window");
+                            var userMessage = document.createElement("div");
+                            userMessage.textContent = feature1;
+                            userMessage.classList.add("userMessage");
+                            chatWindow.appendChild(userMessage);
+                            document.getElementById("feature1").value = "";
 
-                        var thinkingMessage = document.createElement("div");
-                        thinkingMessage.textContent = "Thinking...It may take up to 30 seconds due to compute resources.";
-                        thinkingMessage.classList.add("thinkingMessage");
-                        chatWindow.appendChild(thinkingMessage);
-                        chatWindow.scrollTop = chatWindow.scrollHeight;
+                            var thinkingMessage = document.createElement("div");
+                            thinkingMessage.textContent = "Thinking...It may take up to 30 seconds due to compute resources.";
+                            thinkingMessage.classList.add("thinkingMessage");
+                            chatWindow.appendChild(thinkingMessage);
+                            chatWindow.scrollTop = chatWindow.scrollHeight;
 
-                        var http = new XMLHttpRequest();
-                        http.open("POST", "api/mlcenitex", true);
-                        http.setRequestHeader("Content-Type", "application/json");
-                        http.timeout = 120000;
-                        http.ontimeout = function () {
-                            console.log('Request timed out');
-                            chatWindow.removeChild(thinkingMessage);
-                            displayResponse('Request timed out');
-                        };
-                        http.onreadystatechange = function () {
-                            if (http.readyState == 4 && http.status == 200) {
-                                var response = http.responseText;
+                            var http = new XMLHttpRequest();
+                            http.open("POST", "api/mlcenitex", true);
+                            http.setRequestHeader("Content-Type", "application/json");
+                            http.timeout = 120000;
+                            http.ontimeout = function () {
+                                console.log('Request timed out');
                                 chatWindow.removeChild(thinkingMessage);
-                                displayResponse(response);
-                            }
-                        };
-                        http.send(JSON.stringify({ "text": [feature1], "mode": [feature2] }));
-                    }
-                    function displayResponse(response) {
-                        var chatWindow = document.getElementById("chat-window");
-                        var lines = response.split("\n");
-                        var lineIndex = 0;
-                        var wordIndex = 0;
-                        var aiResponseMessage = document.createElement("div");
-                        aiResponseMessage.classList.add("aiResponseMessage");
-                        chatWindow.appendChild(aiResponseMessage);
+                                displayResponse('Request timed out');
+                            };
+                            http.onreadystatechange = function () {
+                                if (http.readyState == 4 && http.status == 200) {
+                                    var response = http.responseText;
+                                    chatWindow.removeChild(thinkingMessage);
+                                    displayResponse(response);
+                                }
+                            };
+                            http.send(JSON.stringify({ "text": [feature1], "mode": [feature2] }));
+                        }
+                        function displayResponse(response) {
+                            var chatWindow = document.getElementById("chat-window");
+                            var lines = response.split("\n");
+                            var lineIndex = 0;
+                            var wordIndex = 0;
+                            var aiResponseMessage = document.createElement("div");
+                            aiResponseMessage.classList.add("aiResponseMessage");
+                            chatWindow.appendChild(aiResponseMessage);
 
-                        var interval = setInterval(function () {
-                            var currentLine = lines[lineIndex];
-                            if (wordIndex < currentLine.length) {
-                                if (wordIndex === 0) {
-                                    aiResponseMessage.textContent = currentLine[wordIndex];
+                            var interval = setInterval(function () {
+                                var currentLine = lines[lineIndex];
+                                if (wordIndex < currentLine.length) {
+                                    if (wordIndex === 0) {
+                                        aiResponseMessage.textContent = currentLine[wordIndex];
+                                    } else {
+                                        aiResponseMessage.textContent += currentLine[wordIndex];
+                                    }
+                                    wordIndex++;
                                 } else {
-                                    aiResponseMessage.textContent += currentLine[wordIndex];
+                                    wordIndex = 0;
+                                    lineIndex++;
+                                    if (lineIndex < lines.length) {
+                                        aiResponseMessage.textContent += "\n";
+                                        aiResponseMessage = document.createElement("div");
+                                        aiResponseMessage.classList.add("aiResponseMessage");
+                                        chatWindow.appendChild(aiResponseMessage);
+                                    } else {
+                                        clearInterval(interval);
+                                        chatWindow.scrollTop = chatWindow.scrollHeight;
+                                    }
                                 }
-                                wordIndex++;
-                            } else {
-                                wordIndex = 0;
-                                lineIndex++;
-                                if (lineIndex < lines.length) {
-                                    aiResponseMessage.textContent += "\n";
-                                    aiResponseMessage = document.createElement("div");
-                                    aiResponseMessage.classList.add("aiResponseMessage");
-                                    chatWindow.appendChild(aiResponseMessage);
-                                } else {
-                                    clearInterval(interval);
-                                    chatWindow.scrollTop = chatWindow.scrollHeight;
-                                }
-                            }
-                        }, 10);
-                    }
-                </script>
-            </section>
-        </article>
-    </main>
+                            }, 7);
+                        }
+                    </script>
+                </section>
+            </article>
+        </main>
+    </div>
 </body>
 
 </html>
