--- a/mlcenitex/index.html
+++ b/mlcenitex/index.html
@@ -18,29 +18,79 @@
         <main>
             <article id="mainLeft">
                 <section>
-                    <h2>CODE</h2>
+                    <h2>LINKS</h2>
                     <p>
-                        <i class="fab fa-github" aria-hidden="true"></i>
-                        <a href="https://github.com/lyoh001/AzureKB/blob/main/notebook/fine_tune.ipynb">Fine-tuning</a>
+                        <i class="fab fa-microsoft" aria-hidden="true"></i>
+                        <a
+                            href="https://vicgov.sharepoint.com/:w:/r/sites/VG001921/Shared%20Documents/Operations/Technical%20Documents/Active%20Directory%20Disaster%20Recovery/Disaster%20Recovery%20Guide%20INTERNAL%20Active%20Directory%20Domain-v0.1.doc?d=w8df77c295c044655aa58fb0bb624005f&csf=1&web=1&e=8Sz52b">ADDR</a>
                     </p>
                     <p>
-                        <i class="fab fa-github" aria-hidden="true"></i>
-                        <a href="https://github.com/lyoh001/AzureKB/blob/main/notebook/deploy.ipynb">Deployment</a>
+                        <i class="fab fa-microsoft" aria-hidden="true"></i>
+                        <a
+                            href="https://vicgov.sharepoint.com/:w:/r/sites/VG001921/Shared%20Documents/Operations/Technical%20Documents/Alsid%20for%20AD/INT2601%20Active%20Directory%20Security%20Service%20SAD.docx?d=wf22587c79ecb41b69a67cfd363163730&csf=1&web=1&e=97hjKd">Alsid</a>
                     </p>
-                </section>
-                <section>
-                    <h2>DESIGN</h2>
                     <p>
-                        <i class="fab fa-github" aria-hidden="true"></i>
-                        <a href="https://github.com/lyoh001/AzureFunctions">Architectural Design</a>
+                        <i class="fab fa-microsoft" aria-hidden="true"></i>
+                        <a
+                            href="https://vicgov.sharepoint.com/:b:/r/sites/VG001921/Shared%20Documents/Operations/How%20to%27s/How%20to%20-%20Rotate%20the%20%27cloudadmin%27%20credentials%20for%20Azure%20VMware%20Solution.pdf?csf=1&web=1&e=0GH8HZ">AVS</a>
                     </p>
-                </section>
-                <section>
-                    <h2>KB LINKS</h2>
+                    <p>
+                        <i class="fab fa-microsoft" aria-hidden="true"></i>
+                        <a
+                            href="https://vicgov.sharepoint.com/:b:/r/sites/VG001921/Shared%20Documents/Operations/How%20to%27s/How%20to%20-%20Log%20into%20AWS;%20Access%20AWS%20Account%20Details;%20Switch%20Roles%20to%20Perform%20Admin%20Tasks%20in%20AWS.pdf?csf=1&web=1&e=w9hym4">AWS</a>
+                    </p>
+                    <p>
+                        <i class="fab fa-microsoft" aria-hidden="true"></i>
+                        <a
+                            href="https://vicgov.sharepoint.com/:b:/r/sites/VG001921/Shared%20Documents/Operations/How%20to%27s/How%20to%20-%20Create%208.3%20Short%20Folder%20Names%20to%20Fix%20BMC%20Patrol%20Agent%20failing%20to%20Start.pdf?csf=1&web=1&e=kzVbGq">BMC
+                            Patrol</a>
+                    </p>
+                    <p>
+                        <i class="fab fa-microsoft" aria-hidden="true"></i>
+                        <a
+                            href="https://vicgov.sharepoint.com/:b:/r/sites/VG001921/Shared%20Documents/Operations/How%20to%27s/How%20to%20-%20Raise%20a%20decommisioning%20request%20through%20VRA.pdf?csf=1&web=1&e=L1KNI8">Decom</a>
+                    </p>
+                    <p>
+                        <i class="fab fa-microsoft" aria-hidden="true"></i>
+                        <a
+                            href="https://vicgov.sharepoint.com/:w:/r/sites/VG001921/Shared%20Documents/Operations/Technical%20Documents/DHCP%20(Server%202012)/DHCPFailoverAutoConfigSync-UsageGuide.doc?d=w3492705f26224b7e8504961266f12cb5&csf=1&web=1&e=fyZ1Rn">DHCP</a>
+                    </p>
+                    <p>
+                        <i class="fab fa-microsoft" aria-hidden="true"></i>
+                        <a
+                            href="https://vicgov.sharepoint.com/:w:/r/sites/VG001921/Shared%20Documents/Operations/How%20to%27s/New%20Sub-Domain%20Name%20Registration%20Process.docx?d=w260eb1af50c940d4b387f9bc95a2c3b1&csf=1&web=1&e=r0zyB8">Domain
+                            Register</a>
+                    </p>
+                    <p>
+                        <i class="fab fa-microsoft" aria-hidden="true"></i>
+                        <a
+                            href="https://vicgov.sharepoint.com/:w:/r/sites/VG001921/Shared%20Documents/Operations/Technical%20Documents/DOT%20Integration/CUS3257%20DoT%20Integration%20-%20Identity%20Consolidation%20As-built%20v1.1.docx?d=w4216991dba494f7d98fd7100cc371003&csf=1&web=1&e=kPi0xd">DOT</a>
+                    </p>
                     <p>
                         <i class="fab fa-microsoft" aria-hidden="true"></i>
                         <a
                             href="https://vicgov.sharepoint.com/:w:/r/sites/VG001921/Shared%20Documents/Operations/How%20to%27s/Activate%20or%20Approve%20Mailbox%20for%20Dynamics%20365.docx?d=w04bec640b4c643df81341c3d79317da9&csf=1&web=1&e=lemli9">Dynamics</a>
+                    </p>
+                    <p>
+                        <i class="fab fa-microsoft" aria-hidden="true"></i>
+                        <a
+                            href="https://vicgov.sharepoint.com/:b:/r/sites/VG001921/Shared%20Documents/Operations/How%20to%27s/How%20to%20-%20Log%20into%20Elastic%20and%20Perform%20a%20Search.pdf?csf=1&web=1&e=swuB0W">Elastic</a>
+                    </p>
+                    <p>
+                        <i class="fab fa-microsoft" aria-hidden="true"></i>
+                        <a
+                            href="https://vicgov.sharepoint.com/:b:/r/sites/VG001921/Shared%20Documents/Operations/Technical%20Documents/ESU%20FAQ/Extended_Security_Updates_for_Windows_Server_2008_and_SQL_Server_2008_End_of_Service_FAQ.pdf?csf=1&web=1&e=ljPGEM">ESU
+                            FAQ</a>
+                    </p>
+                    <p>
+                        <i class="fab fa-microsoft" aria-hidden="true"></i>
+                        <a
+                            href="https://vicgov.sharepoint.com/:w:/r/sites/VG001921/Shared%20Documents/Operations/Technical%20Documents/File%20Service/File%20Services%20Implementation%20Guide-v0.14.doc?d=w5355cc755859433ca0fb18ada41ab1b0&csf=1&web=1&e=pB75O4">FS</a>
+                    </p>
+                    <p>
+                        <i class="fab fa-microsoft" aria-hidden="true"></i>
+                        <a
+                            href="https://vicgov.sharepoint.com/:b:/r/sites/VG001921/Shared%20Documents/Operations/How%20to%27s/How%20to%20-%20Access,%20upgrade%20iLO%20firmware%20and%20work%20around%20Err_SSL_Version_or_Cipher_Mismatch%20using%20Edge.pdf?csf=1&web=1&e=GBckN0">iLO</a>
                     </p>
                     <p>
                         <i class="fab fa-microsoft" aria-hidden="true"></i>
@@ -55,7 +105,39 @@
                     <p>
                         <i class="fab fa-microsoft" aria-hidden="true"></i>
                         <a
+                            href="https://vicgov.sharepoint.com/:b:/r/sites/VG001921/Shared%20Documents/Operations/How%20to%27s/How%20to%20-%20Set%20up%20a%20user%27s%20account%20in%20AD%20so%20that%20they%20can%20use%20MFA.pdf?csf=1&web=1&e=qfaB8F">MFA</a>
+                    </p>
+                    <p>
+                        <i class="fab fa-microsoft" aria-hidden="true"></i>
+                        <a
+                            href="https://vicgov.sharepoint.com/:w:/r/sites/VG001921/Shared%20Documents/Operations/How%20to%27s/MS%20Exchange%20-%20Basic%20Authentication%20to%20Modern%20Authentication.docx?d=w0b9d066ddfeb4d3c83d3e99af9861713&csf=1&web=1&e=voAUsq">Modern
+                            Auth</a>
+                    </p>
+                    <p>
+                        <i class="fab fa-microsoft" aria-hidden="true"></i>
+                        <a
+                            href="https://vicgov.sharepoint.com/:b:/r/sites/VG001921/Shared%20Documents/Operations/How%20to%27s/How%20to%20-%20Set%20up%20a%20user%27s%20account%20in%20AD%20so%20that%20they%20can%20use%20MFA.pdf?csf=1&web=1&e=qfaB8F">RDS</a>
+                    </p>
+                    <p>
+                        <i class="fab fa-microsoft" aria-hidden="true"></i>
+                        <a
+                            href="https://vicgov.sharepoint.com/:w:/r/sites/VG001921/Shared%20Documents/Operations/Technical%20Documents/Systems%20Centre%20Orchestrator%20(SCORCH)/Creating%20a%20Scheduled%20Task%20in%20SCORCH.doc?d=w8a6f483c703c4da99fbd82c6e38f7b26&csf=1&web=1&e=j2VwXU">Scorch</a>
+                    </p>
+                    <p>
+                        <i class="fab fa-microsoft" aria-hidden="true"></i>
+                        <a
+                            href="https://vicgov.sharepoint.com/:w:/r/sites/VG001921/Shared%20Documents/Operations/Technical%20Documents/Server%20SOE/CenITex%20-%20SOE%20Guideline%201.05.docx?d=wbdc1f475fc0d46f7b49a18d139c997e0&csf=1&web=1&e=RrjAM4">SOE</a>
+                    </p>
+                    <p>
+                        <i class="fab fa-microsoft" aria-hidden="true"></i>
+                        <a
                             href="https://vicgov.sharepoint.com/:w:/r/sites/VG001921/Shared%20Documents/Operations/Technical%20Documents/SpecOps/Functional%20Summary.docx?d=w0bffed0e68414786aaf0e354e5885531&csf=1&web=1&e=fHgM1N">SpecOps</a>
+                    </p>
+                    <p>
+                        <i class="fab fa-microsoft" aria-hidden="true"></i>
+                        <a
+                            href="https://vicgov.sharepoint.com/:w:/r/sites/VG001921/Shared%20Documents/Operations/How%20to%27s/Certificate%20Generation/Generate%20certificates%20from%20VicRoads%20internal%20CA%20and%20purchasing%20CAs%20from%20External%20CA.docx?d=w65984bcd17314cd9b6c154a9aa287a33&csf=1&web=1&e=msjV0T">SSL
+                            Certs</a>
                     </p>
                     <p>
                         <i class="fab fa-microsoft" aria-hidden="true"></i>
@@ -149,7 +231,7 @@
                                         chatWindow.scrollTop = chatWindow.scrollHeight;
                                     }
                                 }
-                            }, 7);
+                            }, 5);
                         }
                     </script>
                 </section>
