--- a/mlcenitex/index.html
+++ b/mlcenitex/index.html
@@ -20,7 +20,7 @@
     <div class="content">
         <header id="dashboard">
             <h1><b>CENITEX</b> KB</h1>
-            AI Knowledge Base Chatbot Powered by a Large Language Model
+            Knowledge Base Chatbot Powered by LLM
         </header>
         <main>
             <article id="mainLeft">
