--- a/mlcenitex/index.html
+++ b/mlcenitex/index.html
@@ -49,7 +49,7 @@
                                     class="fab fa-windows" aria-hidden="true"></i>DHCP</a></li>
                         <li><a
                                 href="https://vicgov.sharepoint.com/:w:/r/sites/VG001921/Shared%20Documents/Operations/How%20to%27s/New%20Sub-Domain%20Name%20Registration%20Process.docx?d=w260eb1af50c940d4b387f9bc95a2c3b1&csf=1&web=1&e=r0zyB8"><i
-                                    class="fab fa-windows" aria-hidden="true"></i>Domain Register</a></li>
+                                    class="fab fa-windows" aria-hidden="true"></i>Dom Register</a></li>
                         <li><a
                                 href="https://vicgov.sharepoint.com/:w:/r/sites/VG001921/Shared%20Documents/Operations/Technical%20Documents/DOT%20Integration/CUS3257%20DoT%20Integration%20-%20Identity%20Consolidation%20As-built%20v1.1.docx?d=w4216991dba494f7d98fd7100cc371003&csf=1&web=1&e=kPi0xd"><i
                                     class="fab fa-windows" aria-hidden="true"></i>DOT</a></li>
@@ -90,7 +90,8 @@
                                 href="https://vicgov.sharepoint.com/:w:/r/sites/VG001921/Shared%20Documents/Operations/Technical%20Documents/Server%20SOE/CenITex%20-%20SOE%20Guideline%201.05.docx?d=wbdc1f475fc0d46f7b49a18d139c997e0&csf=1&web=1&e=RrjAM4"><i
                                     class="fab fa-windows" aria-hidden="true"></i>SOE</a></li>
                         <li><a
-                                href="https://vicgov.sharepoint.com/:w:/r/sites/VG001921/Shared%20Documents/Operations/Technical%20Documents/SpecOps/Functional%20Summary.docx?d=w0bffed0e68414786aaf0e354e5885531&csf=1&web=1&e=fHgM1N">
+                                href="https://vicgov.sharepoint.com/:w:/r/sites/VG001921/Shared%20Documents/Operations/Technical%20Documents/SpecOps/Functional%20Summary.docx?d=w0bffed0e68414786aaf0e354e5885531&csf=1&web=1&e=fHgM1N"><i
+                                    class="fab fa-windows" aria-hidden="true"></i>SpecOps</a></li>
                         <li><a
                                 href="https://vicgov.sharepoint.com/:w:/r/sites/VG001921/Shared%20Documents/Operations/How%20to%27s/Certificate%20Generation/Generate%20certificates%20from%20VicRoads%20internal%20CA%20and%20purchasing%20CAs%20from%20External%20CA.docx?d=w65984bcd17314cd9b6c154a9aa287a33&csf=1&web=1&e=msjV0T"><i
                                     class="fab fa-windows" aria-hidden="true"></i>SSL Certs</a></li>
